--- a/src/patternfly/components/Nav/examples/Navigation.css
+++ b/src/patternfly/components/Nav/examples/Navigation.css
@@ -17,3 +17,20 @@
   inset-block-start: 168px;
   inset-inline-start: 256px;
 }
+
+#ws-core-c-navigation-horizontal .ws-preview-html,
+#ws-core-c-navigation-horizontal-overflow .ws-preview-html {
+  padding: var(--pf-t--global--spacer--md);
+}
+
+.ws-core-c-navigation .ws-preview-html {
+  background: var(--pf-v5-c-page__sidebar--BackgroundColor); /* use sidebar background for vertical nav examples */
+}
+
+[id^="ws-core-c-navigation-horizontal"] .ws-preview-html {
+  background: var(--pf-v5-c-masthead--BackgroundColor); /* use masthead background for horizontal nav examples */
+}
+
+[id^="ws-core-c-navigation-horizontal-subnav"] .ws-preview-html {
+  background: transparent; /* reset background for horizontal subnav examples */
+}
