--- a/src/patternfly/components/Masthead/masthead.scss
+++ b/src/patternfly/components/Masthead/masthead.scss
@@ -1,7 +1,7 @@
 $pf-v5-c-masthead--breakpoint-map: build-breakpoint-map();
 $pf-v5-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl");
 
-:root,
+:where(:root),
 :where(.#{$masthead}) {
   // * Masthead
   --#{$masthead}--RowGap: var(--pf-t--global--spacer--sm);
@@ -45,8 +45,6 @@ $pf-v5-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   --#{$masthead}--#{$toolbar}--Width: 100%;
   --#{$masthead}--#{$toolbar}--PaddingBlock: 0;
   --#{$masthead}--#{$toolbar}--PaddingInline: 0;
-  --#{$masthead}--c-nav--m-horizontal--MarginBlockStart: calc(-1 * var(--#{$nav}--m-horizontal__list--PaddingBlockStart));
-  --#{$masthead}--c-nav--m-horizontal--MarginBlockEnd: calc(-1 * var(--#{$nav}--m-horizontal__list--PaddingBlockEnd));
 }
 
 // * Masthead display stack
