--- a/src/patternfly/components/Table/table-scrollable.scss
+++ b/src/patternfly/components/Table/table-scrollable.scss
@@ -1,4 +1,5 @@
-.#{$table} {
+:where(:root),
+:where(.#{$table}) {
   --#{$table}__sticky-cell--MinWidth--base: #{pf-size-prem(200px)};
   --#{$table}__sticky-cell--MinWidth: var(--#{$table}__sticky-cell--MinWidth--base);
   --#{$table}__sticky-cell--ZIndex: var(--pf-t--global--Zindex--xs);
@@ -25,15 +26,15 @@
     background-color: var(--#{$table}__sticky-cell--BackgroundColor);
     background-clip: padding-box;
 
-    &.pf-m-border-right::before {
-      --#{$table}--cell--m-border-right--before--BorderRightWidth: var(--#{$table}__sticky-cell--m-border-right--before--BorderRightWidth);
-      --#{$table}--cell--m-border-right--before--BorderRightColor: var(--#{$table}__sticky-cell--m-border-right--before--BorderRightColor);
-    }
+    // &.pf-m-border-right::before {
+    //   --#{$table}--cell--m-border-right--before--BorderRightWidth: var(--#{$table}__sticky-cell--m-border-right--before--BorderRightWidth);
+    //   --#{$table}--cell--m-border-right--before--BorderRightColor: var(--#{$table}__sticky-cell--m-border-right--before--BorderRightColor);
+    // }
 
-    &.pf-m-border-left::before {
-      --#{$table}--cell--m-border-left--before--BorderLeftWidth: var(--#{$table}__sticky-cell--m-border-left--before--BorderLeftWidth);
-      --#{$table}--cell--m-border-left--before--BorderLeftColor: var(--#{$table}__sticky-cell--m-border-left--before--BorderLeftColor);
-    }
+    // &.pf-m-border-left::before {
+    //   --#{$table}--cell--m-border-left--before--BorderLeftWidth: var(--#{$table}__sticky-cell--m-border-left--before--BorderLeftWidth);
+    //   --#{$table}--cell--m-border-left--before--BorderLeftColor: var(--#{$table}__sticky-cell--m-border-left--before--BorderLeftColor);
+    // }
 
     &.pf-m-right,
     &.pf-m-inline-end {
@@ -48,7 +49,8 @@
   }
 }
 
-.#{$scroll-outer-wrapper} {
+:where(:root),
+:where(.#{$scroll-outer-wrapper}) {
   --#{$scroll-outer-wrapper}--MinHeight: #{pf-size-prem(400px)};
   --#{$scroll-outer-wrapper}--MaxHeight: 100%;
 
@@ -60,7 +62,8 @@
   overflow: hidden;
 }
 
-.#{$scroll-inner-wrapper} {
+:where(:root),
+:where(.#{$scroll-inner-wrapper}) {
   display: flex;
   flex-direction: column;
   max-width: 100%;
