feat(DualListSelector): more penta updates

--- a/src/patternfly/components/DualListSelector/dual-list-selector-menu.hbs
+++ b/src/patternfly/components/DualListSelector/dual-list-selector-menu.hbs
@@ -1,4 +1,5 @@
 <div class="{{pfv}}dual-list-selector__menu{{#if dual-list-selector-menu--modifier}} {{dual-list-selector-menu--modifier}}{{/if}}"
+  tabindex="0"
   {{#if dual-list-selector-menu--attribute}}
     {{{dual-list-selector-menu--attribute}}}
   {{/if}}>
