chore(menu-toggle): update plain toggles in examples/demos

--- a/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar.hbs
+++ b/src/patternfly/components/LogViewer/templates/__log-viewer-toolbar.hbs
@@ -6,7 +6,7 @@
           {{> __log-viewer-toolbar-select}}
         {{/toolbar-item}}
         {{#> toolbar-group toolbar-group--modifier="pf-m-toggle-group pf-m-show-on-lg"}}
-          {{> toolbar-toggle toolbar-toggle--icon="fa-search"}}
+          {{> toolbar-toggle toolbar-toggle--icon="search"}}
           {{> __log-viewer-toolbar-search-filter __log-viewer-toolbar-search-filter--Width="268px"}}
         {{/toolbar-group}}
         {{#> toolbar-item toolbar-item--modifier="pf-m-gap-none"}}
