--- a/src/patternfly/demos/Masthead/masthead-template-application-launcher.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-application-launcher.hbs
@@ -1,3 +1,1 @@
-{{#> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Application launcher"'}}
-  <i class="fas fa-th" aria-hidden="true"></i>
-{{/menu-toggle}}
+{{> menu-toggle menu-toggle--IsPlain=true menu-toggle--attribute='aria-label="Application launcher"' menu-toggle--icon="th"}}
