--- a/src/patternfly/demos/Masthead/masthead-template-content-icon-group.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-content-icon-group.hbs
@@ -9,19 +9,13 @@
       {{> masthead-template-application-launcher app-launcher--id=(concat toolbar-group--id '-app-launcher')}}
     {{/toolbar-item}}
     {{#> toolbar-item}}
-      {{#> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Settings"'}}
-        <i class="fas fa-cog" aria-hidden="true"></i>
-      {{/menu-toggle}}
+      {{> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Settings"' menu-toggle--icon="cog"}}
     {{/toolbar-item}}
     {{#> toolbar-item}}
-      {{#> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Help"'}}
-        <i class="fas fa-question-circle" aria-hidden="true"></i>
-      {{/menu-toggle}}
+      {{> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Help"' menu-toggle--icon="question-circle"}}
     {{/toolbar-item}}
   {{/toolbar-group}}
   {{#> toolbar-item toolbar-item--modifier=(concat 'pf-m-hidden-on-' masthead-template-content-icon-group--breakpoint)}}
-    {{#> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Actions"'}}
-      <i class="fas fa-ellipsis-v" aria-hidden="true"></i>
-    {{/menu-toggle}}
+    {{> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Actions"' menu-toggle--icon="ellipsis-v"}}
   {{/toolbar-item}}
 {{/toolbar-group}}
