--- a/src/patternfly/components/Menu/templates/menu-breadcrumbs--dropdown.hbs
+++ b/src/patternfly/components/Menu/templates/menu-breadcrumbs--dropdown.hbs
@@ -1,7 +1,7 @@
 {{#> breadcrumb-item}}
   {{> breadcrumb-item-divider}}
   {{#> breadcrumb-dropdown}}
-    {{#> menu-toggle menu-toggle--IsPlain="true"}}
+    {{#> menu-toggle menu-toggle--IsPlain=true}}
       {{#> badge badge--modifier="pf-m-read"}}
         {{menu-toggle--badge--text}} <i class="fas fa-caret-down" aria-hidden="true"></i>
       {{/badge}}
