--- a/src/patternfly/base/tokens/_tokens-font.scss
+++ b/src/patternfly/base/tokens/_tokens-font.scss
@@ -50,32 +50,103 @@
   --pf-t--global--link--text-decoration: var(--pf-t--global--text-decoration--100);
   --pf-t--global--link--text-decoration--hover: var(--pf-t--global--text-decoration--200);
 
-  // blend modes 
-  --pf-t--global--mix-blend-mode--100: multiply;
-  --pf-t--global--mix-blend-mode--200: screen;
-  --pf-t--global--background--color--action--plain--hover--blend: var(--pf-t--global--mix-blend-mode--100);
+  // sm box-shadow
+  --pf-t--global--box-shadow--sm: 
+    var(--pf-t--global--box-shadow--X--sm--default) 
+    var(--pf-t--global--box-shadow--Y--sm--default) 
+    var(--pf-t--global--box-shadow--blur--sm) 
+    var(--pf-t--global--box-shadow--spread--sm)
+    var(--pf-t--global--box-shadow--color--sm);
+  --pf-t--global--box-shadow--sm--top: 
+    var(--pf-t--global--box-shadow--X--sm--top) 
+    var(--pf-t--global--box-shadow--Y--sm--top) 
+    var(--pf-t--global--box-shadow--blur--sm) 
+    var(--pf-t--global--box-shadow--spread--sm)
+    var(--pf-t--global--box-shadow--color--sm);
+  --pf-t--global--box-shadow--sm--bottom: 
+    var(--pf-t--global--box-shadow--X--sm--bottom) 
+    var(--pf-t--global--box-shadow--Y--sm--bottom) 
+    var(--pf-t--global--box-shadow--blur--sm) 
+    var(--pf-t--global--box-shadow--spread--sm)
+    var(--pf-t--global--box-shadow--color--sm);
+  --pf-t--global--box-shadow--sm--left: 
+    var(--pf-t--global--box-shadow--X--sm--left) 
+    var(--pf-t--global--box-shadow--Y--sm--left) 
+    var(--pf-t--global--box-shadow--blur--sm) 
+    var(--pf-t--global--box-shadow--spread--sm)
+    var(--pf-t--global--box-shadow--color--sm);
+  --pf-t--global--box-shadow--sm--right: 
+    var(--pf-t--global--box-shadow--X--sm--right) 
+    var(--pf-t--global--box-shadow--Y--sm--right) 
+    var(--pf-t--global--box-shadow--blur--sm) 
+    var(--pf-t--global--box-shadow--spread--sm)
+    var(--pf-t--global--box-shadow--color--sm);
 
-  // box-shadow
-  --pf-t--global--box-shadow--sm: 0px 1px 2px 0px rgb(0 0 0 / 16%);
-  --pf-t--global--box-shadow--sm--top: 0px -1px 2px 0px rgb(0 0 0 / 16%);
-  --pf-t--global--box-shadow--sm--bottom: 0px 1px 2px 0px rgb(0 0 0 / 16%);
-  --pf-t--global--box-shadow--sm--left: -1px 0px 2px 0px rgb(0 0 0 / 16%);
-  --pf-t--global--box-shadow--sm--right: 1px 0px 2px 0px rgb(0 0 0 / 16%);
-  --pf-t--global--box-shadow--md: 0px 4px 8px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--md--top: 0px -4px 8px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--md--bottom: 0px 4px 8px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--md--left: -4px 0px 8px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--md--right: 4px 0px 8px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--lg: 0px 8px 24px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--lg--top: 0px -8px 24px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--lg--bottom: 0px 8px 24px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--lg--left: -8px 0px 24px 0px rgb(0 0 0 / 12%);
-  --pf-t--global--box-shadow--lg--right: 8px 0px 24px 0px rgb(0 0 0 / 12%);
+  // md box-shadow
+  --pf-t--global--box-shadow--md: 
+    var(--pf-t--global--box-shadow--X--md--default) 
+    var(--pf-t--global--box-shadow--Y--md--default) 
+    var(--pf-t--global--box-shadow--blur--md) 
+    var(--pf-t--global--box-shadow--spread--md)
+    var(--pf-t--global--box-shadow--color--md);
+  --pf-t--global--box-shadow--md--top: 
+    var(--pf-t--global--box-shadow--X--md--top) 
+    var(--pf-t--global--box-shadow--Y--md--top) 
+    var(--pf-t--global--box-shadow--blur--md) 
+    var(--pf-t--global--box-shadow--spread--md)
+    var(--pf-t--global--box-shadow--color--md);
+  --pf-t--global--box-shadow--md--bottom: 
+    var(--pf-t--global--box-shadow--X--md--bottom) 
+    var(--pf-t--global--box-shadow--Y--md--bottom) 
+    var(--pf-t--global--box-shadow--blur--md) 
+    var(--pf-t--global--box-shadow--spread--md)
+    var(--pf-t--global--box-shadow--color--md);
+  --pf-t--global--box-shadow--md--left: 
+    var(--pf-t--global--box-shadow--X--md--left) 
+    var(--pf-t--global--box-shadow--Y--md--left) 
+    var(--pf-t--global--box-shadow--blur--md) 
+    var(--pf-t--global--box-shadow--spread--md)
+    var(--pf-t--global--box-shadow--color--md);
+  --pf-t--global--box-shadow--md--right: 
+    var(--pf-t--global--box-shadow--X--md--right) 
+    var(--pf-t--global--box-shadow--Y--md--right) 
+    var(--pf-t--global--box-shadow--blur--md) 
+    var(--pf-t--global--box-shadow--spread--md)
+    var(--pf-t--global--box-shadow--color--md);
+
+  // lg box-shadow
+  --pf-t--global--box-shadow--lg: 
+    var(--pf-t--global--box-shadow--X--lg--default) 
+    var(--pf-t--global--box-shadow--Y--lg--default) 
+    var(--pf-t--global--box-shadow--blur--lg) 
+    var(--pf-t--global--box-shadow--spread--lg)
+    var(--pf-t--global--box-shadow--color--lg);
+  --pf-t--global--box-shadow--lg--top: 
+    var(--pf-t--global--box-shadow--X--lg--top) 
+    var(--pf-t--global--box-shadow--Y--lg--top) 
+    var(--pf-t--global--box-shadow--blur--lg) 
+    var(--pf-t--global--box-shadow--spread--lg)
+    var(--pf-t--global--box-shadow--color--lg);
+  --pf-t--global--box-shadow--lg--bottom: 
+    var(--pf-t--global--box-shadow--X--lg--bottom) 
+    var(--pf-t--global--box-shadow--Y--lg--bottom) 
+    var(--pf-t--global--box-shadow--blur--lg) 
+    var(--pf-t--global--box-shadow--spread--lg)
+    var(--pf-t--global--box-shadow--color--lg);
+  --pf-t--global--box-shadow--lg--left: 
+    var(--pf-t--global--box-shadow--X--lg--left) 
+    var(--pf-t--global--box-shadow--Y--lg--left) 
+    var(--pf-t--global--box-shadow--blur--lg) 
+    var(--pf-t--global--box-shadow--spread--lg)
+    var(--pf-t--global--box-shadow--color--lg);
+  --pf-t--global--box-shadow--lg--right: 
+    var(--pf-t--global--box-shadow--X--lg--right) 
+    var(--pf-t--global--box-shadow--Y--lg--right) 
+    var(--pf-t--global--box-shadow--blur--lg) 
+    var(--pf-t--global--box-shadow--spread--lg)
+    var(--pf-t--global--box-shadow--color--lg);
 
   &:where(.pf-v5-theme-dark) {
-    // blend mode
-    --pf-t--global--background--color--action--plain--hover--blend: var(--pf-t--global--mix-blend-mode--200);
-
     // box shadow
     --pf-t--global--box-shadow--sm: 0px 1px 2px 0px rgb(0 0 0 / 50%);
     --pf-t--global--box-shadow--sm--top: 0px -1px 2px 0px rgb(0 0 0 / 50%);
