--- a/src/patternfly/components/Label/label.scss
+++ b/src/patternfly/components/Label/label.scss
@@ -186,7 +186,6 @@
   --#{$label}--m-overflow--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
   --#{$label}--m-overflow--hover--Color: var(--pf-t--global--text--color--brand--hover);
   --#{$label}--m-overflow--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--hover);
-  --#{$label}--m-overflow--MixBlendMode: var(--pf-t--global--background--color--action--plain--hover--blend);
 
   // Add
   --#{$label}--m-add--Color: var(--pf-t--global--text--color--brand--default);
@@ -358,7 +357,7 @@
     --#{$label}--m-outline__icon--Color: var(--#{$label}--m-success--m-outline__icon--Color);
     --#{$label}--m-outline--BorderColor: var(--#{$label}--m-success--m-outline--BorderColor);
     --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-success--m-outline--m-clickable--hover--BorderColor);
-    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-success--m-outline--m-clickable--hover__icon--Color)
+    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-success--m-outline--m-clickable--hover__icon--Color);
   }
 
   &.pf-m-warning {
@@ -371,7 +370,7 @@
     --#{$label}--m-outline__icon--Color: var(--#{$label}--m-warning--m-outline__icon--Color);
     --#{$label}--m-outline--BorderColor: var(--#{$label}--m-warning--m-outline--BorderColor);
     --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-warning--m-outline--m-clickable--hover--BorderColor);
-    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-warning--m-outline--m-clickable--hover__icon--Color)
+    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-warning--m-outline--m-clickable--hover__icon--Color);
   }
 
   &.pf-m-danger {
@@ -384,7 +383,7 @@
     --#{$label}--m-outline__icon--Color: var(--#{$label}--m-danger--m-outline__icon--Color);
     --#{$label}--m-outline--BorderColor: var(--#{$label}--m-danger--m-outline--BorderColor);
     --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-danger--m-outline--m-clickable--hover--BorderColor);
-    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-danger--m-outline--m-clickable--hover__icon--Color)
+    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-danger--m-outline--m-clickable--hover__icon--Color);
   }
 
   &.pf-m-info {
@@ -397,7 +396,7 @@
     --#{$label}--m-outline__icon--Color: var(--#{$label}--m-info--m-outline__icon--Color);
     --#{$label}--m-outline--BorderColor: var(--#{$label}--m-info--m-outline--BorderColor);
     --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-info--m-outline--m-clickable--hover--BorderColor);
-    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-info--m-outline--m-clickable--hover__icon--Color)
+    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-info--m-outline--m-clickable--hover__icon--Color);
   }
 
   &.pf-m-custom {
@@ -410,7 +409,7 @@
     --#{$label}--m-outline__icon--Color: var(--#{$label}--m-custom--m-outline__icon--Color);
     --#{$label}--m-outline--BorderColor: var(--#{$label}--m-custom--m-outline--BorderColor);
     --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-custom--m-outline--m-clickable--hover--BorderColor);
-    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-success--m-outline--m-clickable--hover__icon--Color)
+    --#{$label}--m-outline--m-clickable--hover__icon--Color: var(--#{$label}--m-success--m-outline--m-clickable--hover__icon--Color);
   }
 
   &.pf-m-compact {
@@ -464,8 +463,6 @@
   &.pf-m-overflow {
     --#{$label}--Color: var(--#{$label}--m-overflow--Color);
     --#{$label}--BackgroundColor: var(--#{$label}--m-overflow--BackgroundColor);
-
-    mix-blend-mode: var(--#{$label}--m-overflow--MixBlendMode);
 
     &:is(:hover, :focus) {
       --#{$label}--m-overflow--Color: var(--#{$label}--m-overflow--hover--Color);
