feat(tokens): fix extra px on a token

--- a/src/patternfly/base/tokens/_tokens-default.scss
+++ b/src/patternfly/base/tokens/_tokens-default.scss
@@ -7,8 +7,8 @@
   --pf-t--global--background--color--action--plain--default: rgba(255, 255, 255, 0.0000);
   --pf-t--global--background--color--600: rgba(199, 199, 199, 0.2500);
   --pf-t--global--background--color--500: rgba(21, 21, 21, 0.2000);
-  --pf-t--global--box-shadow--color--200: rgba(0, 0, 0, 0.1200)px;
-  --pf-t--global--box-shadow--color--100: rgba(0, 0, 0, 0.1600)px;
+  --pf-t--global--box-shadow--color--200: rgba(0, 0, 0, 0.1200);
+  --pf-t--global--box-shadow--color--100: rgba(0, 0, 0, 0.1600);
   --pf-t--global--box-shadow--spread--100: 0px;
   --pf-t--global--box-shadow--blur--300: 24px;
   --pf-t--global--box-shadow--blur--200: 8px;
